# impactchart

./: README.md  pydata-ldn.md  pyproject.toml
.github/workflows/: coverage-report.yml  lint.yml  test-matrix.yml  unit-test.yml
images/: combine_images.sh
impactchart/: __init__.py  model.py
impactchart/backend/: __init__.py  base.py  bokeh_backend.py  matplotlib.py
impactchart/cli/: impactchart.py  main.py
notebooks/: Interactive Impact Chart.ipynb
reports/coverage/: d_b42e7e6b49e0cca9___init___py.html  d_b42e7e6b49e0cca9_model_py.html  d_f3ff98d478c32a61___init___py.html  d_f3ff98d478c32a61_base_py.html  d_f3ff98d478c32a61_matplotlib_py.html  index.html
sampledata/: Makefile  README.md  evl-34.csv  evl-34017.csv
test/: test_model.py
tests/: test_model.py
