[tool.poetry]
name = "impactchart"
version = "0.4.2"
description = "A package for generating impact charts."
license = "HL3-CL-ECO-EXTR-FFD-LAW-MIL-SV"
authors = ["Darren Vengroff"]
readme = "README.md"
repository = "https://github.com/vengroff/impactchart"
keywords = ["impact charts", "regression", "machine learning", "analysis"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research"
]

[tool.poetry.dependencies]
python = "^3.11"
logargparser = "^0.1.1"
shap = "^0.44.1"
xgboost = "^2.0.3"
matplotlib = "^3.8.2"
PyYAML = "^6.0"
Sphinx = { version = "^7.2.6", optional = true }
sphinx-rtd-theme = { version = "2.0.0", optional = true }
sphinx-copybutton = { version = "^0.5.2", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
nbsphinx = { version = "^0.9.3", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinx-copybutton", "sphinxcontrib-napoleon"]

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^3.0.0"
scikit-image = "^0.22.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.0.0"
black = "^24.1.1"
isort = "^5.13.2"

[tool.poetry.group.dist.dependencies]
genbadge = {extras = ["all"], version = "^1.1.0"}

[tool.poetry.scripts]
impactchart = "impactchart.cli.main:main"

[tool.coverage.report]
omit = ["tests/*"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
